shimlang/test_scripts/errors/undefined_in_call.stderr
 5 | greet(unknown);
           ^^^^^^^
Error: Unknown identifier "unknown"
